// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render error slot correctly 1`] = `
<div
  role="feed"
  class="van-list"
  aria-busy="false"
>
  <div
    role="button"
    class="van-list__error-text"
    tabindex="0"
  >
    Custom Error
  </div>
  <div class="van-list__placeholder">
  </div>
</div>
`;

exports[`should render finished slot correctly 1`] = `
<div
  role="feed"
  class="van-list"
  aria-busy="false"
>
  <div class="van-list__finished-text">
    Custom Finished
  </div>
  <div class="van-list__placeholder">
  </div>
</div>
`;
